--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "@prisma/client": "4.11.0"
-  },
+  "name": "oxbury-test",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
-    "dev": "node src/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon app.ts"
   },
-  "prisma": {
-  
-    "seed": "node prisma/seed.js"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "prisma": "4.11.0"
+    "@types/express": "^4.17.17",
+    "nodemon": "^2.0.22"
   }
 }
