--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "jest",
+    "test": "jest tests/*",
     "serve": "nodemon app.ts",
     "build": "tsc",
     "start": "nodemon -q dist/app.js"
