--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@types/express": "^4.17.17",
+    "nanoid": "^4.0.2",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.5"
